--- a/src/main/resources/templates/categorias/formularioCategorias.html
+++ b/src/main/resources/templates/categorias/formularioCategorias.html
@@ -6,5 +6,16 @@
 </head>
 <body>
 	<h1>Formulario categorias</h1>
+	<form th:action="@{/categorias/guardar}" method="post">
+		Nombre: <br>
+		<input type="text" name="nombre" value="">
+		<br> 
+		Descripcion
+		<br> 
+		<input type="text" name="descripcion" value="">
+		<br>
+		<br> 
+		<input type="submit" value="Guardar">
+	</form>
 </body>
 </html>
