--- a/src/main/resources/templates/vacantes/listVacantes.html
+++ b/src/main/resources/templates/vacantes/listVacantes.html
@@ -21,7 +21,7 @@
 
 <body>
 
-	<header th:insert="fragments/menu :: menu-principal"></header>
+	<header th:insert="fragmentos/menu :: menu-principal"></header>
 
 	<main role="main">
 		<hr>
@@ -32,10 +32,11 @@
 					<strong>Listado de Ofertas de Trabajo</strong>
 				</h4>
 				<div class="card-body">
-					<a class="btn btn-primary" th:href="@{/vacantes/create}"
+					<a class="btn btn-primary" th:href="@{/vacantes/crear}"
 						title="Crear nueva Oferta de Trabajo" role="button"><i
 						class="fas fa-file" aria-hidden="true"></i> Nueva</a>
 					<hr>
+					<h5 th:text="${msg}"></h5>
 					<table class="table table-hover">
 						<thead class="thead-light">
 							<tr>
@@ -72,7 +73,7 @@
 
 	</main>
 
-	<footer th:insert="fragments/footer :: pie-pagina" class="footer"></footer>
+	<footer th:insert="fragmentos/footer :: pie-pagina" class="footer"></footer>
 
 	<!-- Bootstrap core JavaScript
     ================================================== -->
