--- a/src/main/resources/templates/vacantes/listVacantes.html
+++ b/src/main/resources/templates/vacantes/listVacantes.html
@@ -36,7 +36,7 @@
 						title="Crear nueva Oferta de Trabajo" role="button"><i
 						class="fas fa-file" aria-hidden="true"></i> Nueva</a>
 					<hr>
-					<h5 th:text="${msg}"></h5>
+					<h5 th:text="${msg}" class="alert alert-success"></h5>
 					<table class="table table-hover">
 						<thead class="thead-light">
 							<tr>
